<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyBJmrp9C2culZ2W_zAxSA7iatV_dK_40fg</string>
    <string name="app_name">TANFIT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">Change Password</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="long_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="small_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book.
         </string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_bold_roboto">Roboto-Bold.ttf</string>
    <string name="font_roboto">Roboto-Regular.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="signup">SIGNUP</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="enter_the_4_digit_code">Enter the 4 digit code</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_email_forgot_password">Enter your Email Address</string>
    <string name="forgot_password_email_message">Enter your e-mail address and we\'ll send you a link to reset your password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_email_send_heading">Check in your mail!</string>
    <string name="forgot_password_email_send_message">We just emailed you with the instructions to reset your password</string>
    <string name="forgot_password_email_send_message_query">For any questions or problems \n please email us at</string>
    <string name="sample_email">tanfit@sampleemail.com</string>
    <string name="email_app_error">No Email App Found</string>
    <string name="forgot_password_send_mail">Send mail...</string>
    <string name="forgot_password_reset_heading">Reset your password</string>
    <string name="forgot_password_reset_message">What would you like your new password be?</string>
    <string name="enter_the_4_digit_code_we_send_you_via_email_to_continue">Enter the 4 digit code we send you via email to continue</string>
    <string name="code_expires_in">code expires in:</string>
    <string name="submit">Submit</string>
    <string name="verify_email">Verify Email</string>
    <string name="correct_verification_code">Please insert correct verification code.</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="term_condition_agree">I agree to Terms and Conditions</string>
    <string name="term_condition">Terms and Conditions</string>
    <string name="description">Description</string>
    <string name="special_features">Special Features</string>
    <string name="trainer">Trainer</string>
    <string name="music">Music</string>
    <string name="changing_room">Changing Room</string>
    <string name="treadmil">Treadmill</string>
    <string name="amenilities">Amenities</string>
    <string name="view_studio_page">View Studio Page</string>
    <string name="book_now">Book Now</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="Cancel">Cancel Subcription</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_book_class">Are you sure you want to book class?</string>
    <string name="are_you_sure_you_want_activate_account">Are you sure you want to activate your account?</string>
    <string name="are_you_sure_you_want_delete_account">Are you sure you want to delete account?</string>
    <string name="are_you_sure_you_want_cancel_class">Are you sure you want to cancel class?</string>
    <string name="are_you_sure_you_want_to_pause_subcription">Are you sure you want to Pause Subcription?</string>
    <string name="are_you_sure_you_want_to_cancel_subcription">Are you sure you want to cancel Subcription?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="your_subscription_plan_is">Your Subscription Plan is</string>
    <string name="need_a_short_break">Need a Short Break?</string>
    <string name="visit_website">Visit Website</string>
    <string name="pause">Pause</string>
    <string name="you_can_pause_your_subscription_for">You can pause your subscription for</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="by_location">By Location</string>
    <string name="by_activity">By Activity</string>
    <string name="by_available_hours">By Available hours</string>
    <string name="activity">Activity</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="delete_account">Delete Account</string>
    <string name="explore_all">Explore all the classes on TANFIT</string>
    <string name="book_classes_with_one_click">Book classes with one click</string>
    <string name="enjoy">Enjoy</string>
    <string name="actually_i_d_rather_pause"><u>Actually,I\'d rather pause</u></string>
    <string name="complete_cancellation">Complete Cancellation</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="don_t_forget_you_can_also_pause_your_membership_if_you_need_to_take_a_break">Don\'t forget you can also pause your membership if you need to take a break</string>
</resources>