<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/x10"
    android:layout_marginStart="@dimen/x10"
    android:background="@color/white"
    android:orientation="vertical">

    <com.ingic.tanfit.ui.views.AnyTextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x5"
        android:layout_marginTop="@dimen/x10"
        android:text="@string/are_you_sure_you_want_to_leave"
        android:textColor="@color/app_blue"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <com.ingic.tanfit.ui.views.AnyTextView
        android:id="@+id/txt_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x5"
        android:alpha="0.8"
        android:text="@string/don_t_forget_you_can_also_pause_your_membership_if_you_need_to_take_a_break"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />


    <Button
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:text="@string/complete_cancellation"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <com.ingic.tanfit.ui.views.AnyTextView
        android:id="@+id/btn_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x15"
        android:alpha="0.8"
        android:text="@string/actually_i_d_rather_pause"
        android:gravity="center"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />


</LinearLayout>