<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x15"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/x15">

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_location"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_bold" />

        <com.ingic.tanfit.ui.views.AnyEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x6"
            android:background="@drawable/invite_boarder"
            android:hint="Location"
            android:padding="@dimen/x10"
            android:textSize="@dimen/x10"
            app:typeface="@string/font_normal" />

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x6"
            android:text="@string/by_activity"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_bold" />

        <com.ingic.tanfit.ui.views.AnyEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x6"
            android:background="@drawable/invite_boarder"
            android:hint="@string/activity"
            android:padding="@dimen/x10"
            android:textSize="@dimen/x10"
            app:typeface="@string/font_normal" />

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x6"
            android:text="@string/by_available_hours"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_bold" />

        <com.ingic.tanfit.ui.views.AnyEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x6"
            android:background="@drawable/invite_boarder"
            android:hint="Hours"
            android:padding="@dimen/x10"
            android:textSize="@dimen/x10"
            app:typeface="@string/font_normal" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginStart="@dimen/x10"
            android:layout_marginEnd="@dimen/x10"
            android:layout_below="@+id/txt_description2"
            android:layout_marginTop="@dimen/x15"
            android:background="@color/app_blue"
            android:text="Apply"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>




    <com.ingic.tanfit.ui.views.CustomRecyclerView
        android:id="@+id/lv_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x15"
        android:layout_alignParentBottom="true"
        android:scrollbars="none"
        android:divider="@null"
        android:visibility="visible" />

    </RelativeLayout>

</LinearLayout>