<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/app_background_blue_white"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/x160"
        android:layout_height="@dimen/x160"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x60"
        android:background="@drawable/circle">

        <ImageView
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x80"
            android:layout_centerInParent="true"
            android:src="@drawable/lock_icon"
            />

    </RelativeLayout>

    <com.ingic.tanfit.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_reset_heading"
        android:textColor="@color/app_blue"
        android:textSize="@dimen/x20"
        app:typeface="@string/font_normal"/>

    <com.ingic.tanfit.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x40"
        android:layout_marginStart="@dimen/x40"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:text="@string/forgot_password_reset_message"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_margin="@dimen/x15"
        android:background="@drawable/black_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/x15"
            android:layout_weight="0.1"
            android:src="@drawable/lock"/>

        <com.ingic.tanfit.ui.views.AnyEditTextView
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/x40"
            android:layout_weight="0.8"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/x5"
            android:paddingStart="@dimen/x8"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal"/>

        <CheckBox
            android:id="@+id/btn_show_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/x20"
            android:layout_gravity="center_vertical"
            android:button="@drawable/password_botton_eye"
            android:layout_weight="0.1"

            android:src="@drawable/ic_launcher"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginStart="@dimen/x15"
        android:background="@color/app_blue"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />
</LinearLayout>