<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/x10"
        android:layout_marginStart="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:orientation="vertical">


        <com.ingic.tanfit.ui.views.AnyTextView
            android:id="@+id/txt_aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/x2"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal" />

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/x2"
            android:text="@string/explore_all"
            android:gravity="center"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x10"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_gravity="center"/>

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/x2"
            android:text="@string/book_classes_with_one_click"
            android:gravity="center"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginBottom="@dimen/x10"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_gravity="center"/>

        <com.ingic.tanfit.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/x2"
            android:text="@string/enjoy"
            android:gravity="center"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginBottom="@dimen/x10"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal" />


    </LinearLayout>

</ScrollView>